# supply_chain_tracker

./: .gitignore  .pre-commit-config.yaml  Makefile  README.en.md  README.md
libs/: pyproject.toml
libs/errors/: value_objects.py
libs/libs/auth/: __init__.py  jwt.py  models.py  provider.py
libs/libs/cache/: memory.py  ports.py  redis.py
libs/libs/errors/: handlers.py  value_objects.py
libs/libs/health/: checks.py  dto.py  router.py
libs/libs/messaging/: base.py  commands.py  events.py  kafka.py  memory.py  ports.py
libs/libs/middlewares/: logger.py
libs/libs/observability/: logger.py  metrics.py
libs/libs/value_objects/: location.py  timestamp.py
libs/messaging/: base.py  events.py  kafka.py
services/blockchain_service/: Dockerfile  pyproject.toml  requirements.txt  yoyo.ini
services/blockchain_service/app/domain/ports/: __init__.py  blockchain_gateway.py
services/blockchain_service/migrations/: 001_create_blockchain_records.py  002_create_nonce_manager.py  003_create_confirmation_tracking.py  004_add_blockchain_statistics.py
services/blockchain_service/src/: config.py  main.py
services/blockchain_service/src/app/services/: blockhain.py
services/blockchain_service/src/app/workers/: confirmation_monitor.py  worker.py
services/blockchain_service/src/domain/entities/: blockhain_record.py
services/blockchain_service/src/domain/ports/: blockhain_gateway.py  blockhain_repository.py  nonce_manager.py
services/blockchain_service/src/infra/: mock_blockhain_gateway.py  redis_nonse_manager.py  web3_blockhain_gateway.py
services/blockchain_service/src/infra/db/: blockhain_repository.py
services/delivery_service/: Dockerfile  pyproject.toml  requirements.txt
services/delivery_service/app/domain/entities/: courier.py
services/delivery_service/app/domain/ports/: __init__.py  courier_repository.py  delivery_event_publisher.py  delivery_repository.py
services/delivery_service/migrations/: 001_create_couriers.py  002_create_deliveries.py  003_add_delivery_tracking.py  004_add_delivery_status_history.py
services/delivery_service/src/: config.py  main.py
services/delivery_service/src/api/: router.py
services/delivery_service/src/api/dto/: courier.py  delivery.py
services/delivery_service/src/api/handlers/: courier.py  delivery.py
services/delivery_service/src/api/mappers/: courier.py  delivery.py
services/delivery_service/src/app/services/: courier.py  delivery.py
services/delivery_service/src/app/workers/: command_worker.py
services/delivery_service/src/domain/entities/: __init__.py  courier.py  delivery.py
services/delivery_service/src/domain/errors/: courier.py  delivery.py
services/delivery_service/src/domain/ports/: __init__.py  courier_repository.py  delivery_repository.py
services/delivery_service/src/domain/value_objects/: __init__.py  (+2 more)
services/saga_coordinator/: .env  Dockerfile  pyproject.toml  requirements.txt
services/saga_coordinator/migrations/: 001_create_saga_instances.py  002_create_saga_steps.py  003_create_saga_events.py  004_add_saga_statistics.py
services/saga_coordinator/src/: config.py  main.py
services/saga_coordinator/src/api/: router.py
services/saga_coordinator/tests/workers/: test_saga_worker.py
services/shipment_service/: Dockerfile  main.py  pyproject.toml  requirements.txt
services/shipment_service/api/: router.py
services/shipment_service/api/dto/: item.py  shipment.py
services/shipment_service/api/handlers/: __init__.py  item.py  shipment.py
services/shipment_service/api/mappers/: __init__.py  item.py  shipment.py
services/shipment_service/app/: item.py  shipment.py
services/shipment_service/app/services/: item.py  shipment.py
services/shipment_service/domain/entities/: item.py  shipment.py
services/shipment_service/domain/errors/: item.py
services/shipment_service/domain/ports/: item_repository.py  shipment_event_publisher.py  shipment_repository.py
services/shipment_service/domain/value_objects/: __init__.py  location.py  quantity.py  weight.py
services/shipment_service/infra/db/: item_repository.py  shipment_repository.py
services/shipment_service/migrations/: 001_create_shipments.py  002_create_items.py  003_add_shipment_metrics.py  004_add_tracking_history.py
services/shipment_service/src/: config.py  main.py
services/shipment_service/src/api/: router.py
services/warehouse_service/: Dockerfile  __init__.py  main.py  pyproject.toml  requirements.txt
services/warehouse_service/app/api/: router.py
services/warehouse_service/migrations/: 001_create_warehouses.py  002_create_inventory_records.py  003_add_indexes.py
services/warehouse_service/src/: config.py  main.py
services/warehouse_service/src/api/: router.py
(+121 files in other folders)
