[tool.poetry]
name = "saga-coordinator"
version = "0.1.0"
description = ""
authors = ["Михаил <58465577+bubled33@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
libs = {path = "../../libs", develop = true}
pytest = "^9.0.2"
pydantic-settings = "^2.12.0"
fastapi = "^0.123.10"
uvicorn = "^0.38.0"
asyncpg = "^0.29.0"
yoyo-migrations = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
