[tool.poetry]
name = "shipment-service"
version = "0.1.0"
description = ""
authors = ["bubled <zimnitskiymisha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.121.2"
uvicorn = "^0.38.0"
asyncpg = "^0.30.0"
opentelemetry-exporter-otlp = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
