[tool.poetry]
name = "shipment-service"
version = "0.1.0"
description = ""
authors = ["bubled <zimnitskiymisha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = ">=0.123.10"
uvicorn = "^0.38.0"
asyncpg = ">=0.31.0"
opentelemetry-exporter-otlp = "^1.38.0"
aiokafka = "^0.12.0"
libs = {path = "../../libs", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
